<resources>
    <string name="app_name">ChatApp</string>
    <string name="stitch_client_app_id">chatapp-acbgk</string>
    <string name="action_settings">Settings</string>
    <string name="logo">ChatApp</string>
    <string name="ChatApp">ChatApp</string>
    <string name="otp_hint">___</string>
    <string name="submit">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="request_otp">Request OTP</string>
    <string name="i_agree_terms_and_condition">I Agree,<u>Terms and Condition</u></string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_image_fullscreen">Preview</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_field_required">Group name required</string>
    <string name="prompt_groupname">Enter Group Name</string>
    <string name="action_sign_in_short">join</string>
    <string name="capture">capture</string>
    <string name="gallary">gallary</string>
    <string name="title_appbar_style">bold</string>
    <string name="change">Change</string>

</resources>
