<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backdrop_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/otp_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".otp_layout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ed_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="-"
            android:background="@android:color/transparent"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textSize="@android:dimen/app_icon_size" />

        <EditText
            android:id="@+id/ed_otp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textSize="@android:dimen/app_icon_size" />

        <EditText
            android:id="@+id/ed_otp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="-"
            android:background="@android:color/transparent"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textSize="@android:dimen/app_icon_size" />

        <EditText
            android:id="@+id/ed_otp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="-"
            android:background="@android:color/transparent"
            android:hint="@string/otp_hint"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textSize="@android:dimen/app_icon_size" />
    </LinearLayout>

    <Button
        android:id="@+id/otp_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="resend"
        android:text="@string/resend_otp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

</android.support.constraint.ConstraintLayout>